src/k3s-configs/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: gateway-service.k
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8087
  - host: session-service.k
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: session-service
            port:
              number: 8081
  tls:
  - hosts:
    - session-service.k
    - gateway-service.k
    secretName: nginx1-tls-secret
